--- a/web-stitches/2/index.html
+++ b/web-stitches/2/index.html
@@ -5,6 +5,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta property="og:image" content="https://trendydots.com/web-stitches/images/m-header.png" />
+  <meta name="title" property="og:title" content="td. web stitches">
+  <meta name="description" property="og:description"
+    content=" A web application that helps you rapidly design a landing page or an editorial website. Join the crowdfunding.">
+  <meta property="og:type" content="article">
+  <meta name="author" content="trendy dots">
   <link href="https://fonts.googleapis.com/css?family=Muli:200,300,400,600,700,800,900" rel="stylesheet" />
   <link rel="stylesheet" href="./public/dragula.min.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
