updated website, corrected copy

--- a/web-stitches/index.html
+++ b/web-stitches/index.html
@@ -119,16 +119,16 @@
       <div style=" z-index: 3;" class="w-full p-8 sm:w-2/3 flex flex-col items-left text-sm font-bold md:rounded">
 
         <div class="w-full flex flex-col items-center justify-center my-8">
-          <a href="https://twitter.com/trendydots" target="_blank"
-            style="text-decoration: none; color: black; float: right;">
-            <img src="../twitter_black.png" style="vertical-align: middle; height: 1em">
-            @trendydots
-          </a>
+          <h2>
+            <a href="https://twitter.com/trendydots" target="_blank"
+              style="text-decoration: none; color: black; float: right;">
+              <img src="../twitter_black.png" style="vertical-align: middle; height: 1em">
+              @trendydots
+            </a>
         </div>
-
+        </h2>
         <h1 class="leading-normal mb-2 text-center text-grey-dark">
-          If you like the project want to help it grow, <br> please consider donating and becoming a patron.
-        </h1>
+          If you like the project and want to help it grow, <br> please consider donating and becoming a patron. </h1>
         <br><br>
         <div class="flex md:flex-row flex-col items-center justify-center mb-8">
           <div class="flex flex-col ">
@@ -151,9 +151,8 @@
         </div>
       </div>
   </section>
-  <!-- features-1 -->
-  <section
-    class="my-8 lg:my-16 font-sans w-full m-auto flex flex-col lg:flex-row text-center justify-center items-center"
+  <!-- how to use -->
+  <section class="my-8 lg:my-16 font-sans w-full m-auto flex flex-col text-center justify-center items-center"
     style="background: #F5F5F5;">
     <div class="w-full lg:w-2/3 flex flex-col justify-center items-center ">
       <br><br><br><br>
@@ -169,9 +168,38 @@
       <iframe class="w-full rounded shadow-md" src="https://www.youtube-nocookie.com/embed/frEiVOU1dak" frameborder="0"
         allow="autoplay; gyroscope;" allowfullscreen style="height: 450px; max-width: 790px;"></iframe>
       <br><br>
+      <br><br>
+    </div>
+    <div class="w-full lg:w-2/3 flex flex-col justify-center items-center ">
+      <h1>Helping Europe's creative minds</h1> <br><br>
+      <h3 class="leading-normal mb-4 text-grey-darkest text-center p-8">
+        During 24 - 27 April 2020, web-stitches was used by many teams who participated to European Commission's
+        #EUvsVirus hackathon.
+        Teams were able to rapidly build presentation pagesa as well as mobile showcases that demonstrate their awesome
+        ideas on how to create new services and products that help people around the world during the COVID-19 pandemic.
+
+        <br><br>
+        <img src="./images/euvsvirus.png" style="width: 70%;">
+        <br><br>
+        We'd be super happy to hear from everyone who uses web-stitches at
+
+        <a href="https://twitter.com/trendydots" target="_blank"
+          style="margin-left: 10px; text-decoration: none; color: black;">
+          <img src="../twitter_black.png" style="vertical-align: middle; height: 1em">
+          @trendydots
+        </a>
+      </h3>
+
+      <br><br>
 
 
     </div>
+  </section>
+
+  <section
+    class="my-8 lg:my-16 font-sans w-full m-auto flex flex-col lg:flex-row text-center justify-center items-center"
+    style="background: #F5F5F5;">
+
   </section>
 
 
