--- a/web-stitches/index.html
+++ b/web-stitches/index.html
@@ -173,11 +173,10 @@
     <div class="w-full lg:w-2/3 flex flex-col justify-center items-center ">
       <h1>Helping Europe's creative minds</h1> <br><br>
       <h3 class="leading-normal mb-4 text-grey-darkest text-center p-8">
-        During 24 - 27 April 2020, web-stitches was used by many teams who participated to European Commission's
-        #EUvsVirus hackathon.
-        Teams were able to rapidly build presentation pagesa as well as mobile showcases that demonstrate their awesome
-        ideas on how to create new services and products that help people around the world during the COVID-19 pandemic.
-
+        During 24 - 27 April 2020, web-stitches was used by many teams who participated to the European Commission's
+        #EUvsVirus hackathon. The teams were able to rapidly build presentation pages as well as mobile showcases that
+        demonstrate their awesome ideas on how to create new services and products that help people around the world
+        during the COVID-19 pandemic.
         <br><br>
         <img src="./images/euvsvirus.png" style="width: 70%;">
         <br><br>
