--- a/web-stitches/index.html
+++ b/web-stitches/index.html
@@ -2,15 +2,23 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta property="og:image" content="https://trendydots.com/web-stitches/images/m-header.png" />
-  <meta name="title" property="og:title" content="td. web stitches">
+  <meta name="title" property="og:title" content="td. web stitches" />
   <meta name="description" property="og:description"
-    content=" A web application that helps you rapidly design a landing page or an editorial website. Join the crowdfunding.">
-  <meta property="og:type" content="article">
-  <meta name="author" content="trendy dots">
+    content=" A web application that helps you rapidly design a landing page or an editorial website. Join the crowdfunding." />
+  <meta property="og:type" content="article" />
+
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@trendydots" />
+  <meta name="twitter:title" content="td. web stitches" />
+  <meta name="twitter:description"
+    content="A web application that helps you rapidly design a landing page or an editorial website. Join the crowdfunding." />
+  <meta name="twitter:image" content="https://trendydots.com/web-stitches/images/m-header.png" />
+
+  <meta name="author" content="trendy dots" />
 
   <link href=https://trendydots.com/css/stitches.css rel="stylesheet">
   <link href=https://fonts.googleapis.com/css?family=Muli:300,400,600,700,800,900 rel="stylesheet">
