--- a/web-stitches/index.html
+++ b/web-stitches/index.html
@@ -121,11 +121,11 @@
       <img src="./images/d-header.png" alt="" style="margin-top: 20px;" />
     </div>
   </section>
+
   <!-- support-->
   <section class="font-sans m-auto w-full" style="margin-top: 30px; ">
     <div class="flex flex-col sm:flex-row flex-wrap items-center justify-center">
       <div style=" z-index: 3;" class="w-full p-8 sm:w-2/3 flex flex-col items-left text-sm font-bold md:rounded">
-
         <div class="w-full flex flex-col items-center justify-center my-8">
           <h2>
             <a href="https://twitter.com/trendydots" target="_blank"
@@ -156,6 +156,28 @@
               <span> Donate one time</span>
             </a>
           </div>
+
+        </div>
+        <h1 class="leading-normal mb-2 text-center "> Upcoming features </h1>
+      </div>
+      <div class="w-full flex md:flex-row flex-col items-center justify-center px-16">
+        <div class="w-full md:w-1/2 my-4 px-8">
+          <h2 class="leading-normal mb-2 text-center text-grey-dark"> Components Editing </h2>
+          <img src="./images/card-editor1.png" alt=""
+            style="display:block; margin: 0 auto; margin-top: 10px; max-height: 260px;" />
+          <h4 class="leading-normal mb-2 text-center"> After dragging a components into the screen
+            preview, a small dedicated editor will allow easy changes to the component’s information. Your prototypes
+            -
+            your data.
+          </h4>
+        </div>
+        <div class="w-full md:w-1/2 my-4 px-8">
+          <h2 class="leading-normal mb-2 text-center text-grey-dark"> Transitions between sceens </h2>
+          <img src="./images/screen-links.png" alt=""
+            style="display:block; margin: 0 auto; margin-top: 10px; max-height: 260px;" />
+          <h4 class="leading-normal mb-2 text-center "> Transitions between screens will allow you to
+            show and tell user stories. Impress your audience with a clear user experience walkthrough.</h4>
+
         </div>
       </div>
   </section>
