--- a/web-stitches/index.html
+++ b/web-stitches/index.html
@@ -77,7 +77,7 @@
 
   <!-- header mobile statement-->
   <section style="margin-bottom: 0; margin-top:110px; "
-    class="font-sans container m-auto max-w-xl flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
+    class="font-sans container m-auto max-w-xl flex flex-col lg:flex-row text-center lg:text-left sm:items-center md:px-8 lg:mx-8">
     <div class="w-full lg:w-2/3">
       <img src="./images/m-header.png" alt="" style="margin-top: 20px;" />
     </div>
@@ -100,7 +100,7 @@
   </section>
   <!-- header desktop statement-->
   <section style="margin-bottom: 0; margin-top:70px; "
-    class="font-sans container m-auto max-w-xl flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center">
+    class="font-sans container m-auto max-w-xl flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center md:px-8 lg:mx-8">
 
     <div class="w-full lg:w-1/3 flex flex-col justify-center items-start items-center lg:items-start">
       <h2 class="my-4 font-normal">
@@ -123,9 +123,9 @@
   </section>
 
   <!-- support-->
-  <section class="font-sans m-auto w-full" style="margin-top: 30px; ">
+  <section class="font-sans m-auto w-full" style="margin-top: 30px;  border-top: 1px dashed #debe22;">
     <div class="flex flex-col sm:flex-row flex-wrap items-center justify-center">
-      <div style=" z-index: 3;" class="w-full p-8 sm:w-2/3 flex flex-col items-left text-sm font-bold md:rounded">
+      <div style=" z-index: 3;" class="w-full p-8 flex flex-col items-left text-sm font-bold">
         <div class="w-full flex flex-col items-center justify-center my-8">
           <h2>
             <a href="https://twitter.com/trendydots" target="_blank"
@@ -160,19 +160,19 @@
         </div>
         <h1 class="leading-normal mb-2 text-center "> Upcoming features </h1>
       </div>
-      <div class="w-full flex md:flex-row flex-col items-center justify-center px-16">
+      <div class="w-full flex md:flex-row flex-col items-center justify-center px-8 lg:mx-8">
         <div class="w-full md:w-1/2 my-4 px-8">
-          <h2 class="leading-normal mb-2 text-center text-grey-dark"> Components Editing </h2>
+          <h2 class="leading-normal mb-2 text-center text-grey-dark">I. Components Editing </h2>
           <img src="./images/card-editor1.png" alt=""
             style="display:block; margin: 0 auto; margin-top: 10px; max-height: 260px;" />
-          <h4 class="leading-normal mb-2 text-center"> After dragging a components into the screen
+          <h4 class="leading-normal mb-2 text-center"> After dragging a component into the mobile
             preview, a small dedicated editor will allow easy changes to the component’s information. Your prototypes
             -
             your data.
           </h4>
         </div>
         <div class="w-full md:w-1/2 my-4 px-8">
-          <h2 class="leading-normal mb-2 text-center text-grey-dark"> Transitions between sceens </h2>
+          <h2 class="leading-normal mb-2 text-center text-grey-dark">II. Transitions between sceens </h2>
           <img src="./images/screen-links.png" alt=""
             style="display:block; margin: 0 auto; margin-top: 10px; max-height: 260px;" />
           <h4 class="leading-normal mb-2 text-center "> Transitions between screens will allow you to
