--- a/web-stitches/index.html
+++ b/web-stitches/index.html
@@ -102,12 +102,13 @@
   <section style="margin-bottom: 0; margin-top:70px; "
     class="font-sans container m-auto max-w-xl flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center md:px-8 lg:mx-8">
 
-    <div class="w-full lg:w-1/3 flex flex-col justify-center items-start items-center lg:items-start">
+    <div class="w-full lg:w-1/3 flex flex-col justify-center items-start items-center lg:items-end">
       <h2 class="my-4 font-normal">
         <span style="font-weight:600; color:black;"> Easy landing page design</span>
       </h2>
-      <h2 class="my-4 font-normal text-grey-darker">
-        Experiment with building beautiful landing pages and article designs. Drag and drop web components. Replace. Get
+      <h2 class="my-4 font-normal text-grey-darker lg:text-right">
+        Experiment with building beautiful landing pages and article designs. <br> <br> Drag and drop web components.
+        Replace. Get
         creative.
       </h2>
 
