--- a/web-stitches/2/index.html
+++ b/web-stitches/2/index.html
@@ -89,28 +89,27 @@
 
     <div class="flex flex-col" style="height: 620px; width: 500px; margin: 0 auto;">
       <div class="flex flex-col flex-1 border" style="background: #ECEFF1;
-      border: 2px solid #E0E0E0;
-      position: absolute;
-      width: 320px;
-      height: 565px;
-      margin-top: 96px;
-      margin-left: 69px;
-      box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
-      ">
+        border: 2px solid #E0E0E0;
+        position: absolute;
+        width: 300px;
+        height: 565px;
+        margin-top: 96px;
+        margin-left: 69px;
+        box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);">
       </div>
       <img src="./images/demo-phone2.png" style="
         position: absolute;
-        width: 460px;
+        width: 420px;
         margin-top: 0px;
         margin-left: 0px;">
 
       <div class="flex flex-col flex-1 border js-droppable border-grey-lighter overflow-y-scroll" style="background: #ECEFF1;
         border: 2px solid #E0E0E0;
         position: absolute;
-        width: 320px;
-        height: 565px;
-        margin-top: 96px;
-        margin-left: 69px;">
+        width: 291px;
+        height: 514px;
+        margin-top: 92px;
+        margin-left: 64px;">
       </div>
 
 
