--- a/me/index.html
+++ b/me/index.html
@@ -296,7 +296,7 @@
           It takes seconds to experiment with different layouts.
           <br><br>
           <a class="btn bg-white border cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-md md:shadow items-center"
-            href="/web-stitches/" target="_blank" style="white-space: nowrap; border-color: #F2D024;">
+            href="/web-stitches/" target="_blank" style="white-space: nowrap; border-color: green;">
             <span style="white-space: nowrap;"> Try for FREE </span>
           </a>
 
@@ -304,10 +304,63 @@
       </div>
     </section>
 
+    <!-- Oskar -->
+    <section
+      class="bg-white my-8 font-sans container max-w-xl m-auto flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center">
+      <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
+        <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">Recommendation AI
+          (concept)</label>
+        <h2 class="my-4 font-normal font-bold">td<span style="color:#F2D024">.</span> Oskar </h2>
+        <p class="leading-normal mb-4 text-grey-darkest">
+          An experiment around the concept of an AI concierge which can suggest apparel combinations based on occasion,
+          time of the day, season and many other parameters.
+          <br><br>
+          <a class="btn bg-white border cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-md md:shadow items-center"
+            href="/oskar/" target="_blank" style="white-space: nowrap; border-color: blue;">
+            <span style="white-space: nowrap;"> Details </span>
+          </a>
+        </p>
+      </div>
+      <div class="w-full lg:w-1/2">
+        <img src="./osk-big.png" class="shadow-md rounded" alt="" />
+      </div>
+    </section>
+
+    <!-- EUvsVirus-->
+    <section style="border-top:1px solid #eee"
+      class="bg-white mb-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
+      <div class="w-full lg:w-1/2">
+        <img class="shadow-md rounded" src="./euvsvirus.png" alt="" />
+      </div>
+      <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
+        <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">Volunteering</label>
+        <h2 class="my-4 font-normal font-bold">
+          <img class="my-2" style="height: 2.2em; vertical-align: middle;" src="./European_Commission.png"
+            alt="natural language processing">
+          EU vs. Virus Hackathon</h2>
+        <p class="leading-normal mb-4 text-grey-darkest">
+          On 24-26 April, the European Commission, led by the European Innovation Council and in close collaboration
+          with the EU member states, hosted a pan-European hackathon to connect civil society, innovators, partners, and
+          investors across Europe in order to develop innovative solutions for coronavirus-related challenges.
+          <br><br>
+
+          <a class="btn bg-white border cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-md md:shadow items-center"
+            href="https://devpost.com/software/bites-of-culture" target="_blank"
+            style="white-space: nowrap; border-color: blue;">
+            <span style="white-space: nowrap;"> My Devpost Project </span>
+          </a>
+          &nbsp;
+          <a class="btn bg-white border cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-md md:shadow items-center"
+            href="https://www.euvsvirus.org/" target="_blank" style="white-space: nowrap; border-color: blue;">
+            <span style="white-space: nowrap;"> Hackathon Site </span>
+          </a>
+        </p>
+      </div>
+    </section>
+
     <!-- Data4Good -->
     <section
-      class=" bg-white my-8 pt-8 font-sans container max-w-xl m-auto flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center"
-      style="border-top:1px solid #eee">
+      class=" bg-white my-8 pt-8 font-sans container max-w-xl m-auto flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center">
       <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
         <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">Volunteering</label>
         <img class="my-4" style="height: 3em;" src="./d4g.png" alt="natural language processing">
@@ -316,12 +369,19 @@
           Helping teams of data scientists, developers
           and designers working with NGOs and social enterprises to solve complex challenges and identify new
           social impact opportunities.
+          <br><br>
+          <a class="btn bg-white border cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-md md:shadow items-center"
+            href="/data4good/" target="_blank" style="white-space: nowrap; border-color:green;">
+            <span style="white-space: nowrap;"> Explore </span>
+          </a>
         </p>
       </div>
       <div class="w-full lg:w-1/2">
         <img src="./d4g.jpg" class="shadow-md rounded" alt="" />
       </div>
     </section>
+
+
 
   </div>
 
