--- a/oskar/index.html
+++ b/oskar/index.html
@@ -24,7 +24,7 @@
       </span>
 
       <a href="./index.html" class="inline-block text-left flex items-center"
-        style="text-decoration: none; color:black">
+        style="text-decoration: none; color:black; vertical-align: text-bottom;">
         <img src="./img/writing.png" class="h-8 sm:h-8" alt="logo" />
       </a>
 
@@ -46,7 +46,7 @@
         </li>
         <li class="pr-2">
           <a href="#about" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">About
-            us</a>
+          </a>
         </li>
       </ul>
     </div>
@@ -188,10 +188,10 @@
     class="my-8 pt-8 font-serif container max-w-xl m-auto flex flex-col text-center lg:text-left sm:items-center">
     <h1 class="my-4 font-normal">Meet Oskar</h1>
     <p class="leading-normal mb-4 text-center font-sans" style="padding-left:5%; padding-right: 5%; font-size: 1.2em">
-      Oskar is our latest AI experiment which we hope will recommend the proper attire for the proper occasion. It
+      Oskar is my latest AI experiment which I hope will recommend the proper attire for the proper occasion. It
       always starts with
       studying … in fact this is what
-      will make Oskar the expert we can rely on. We aim to build a fun experience where users like you
+      will make Oskar the expert you and I can rely on. I aim to build a fun experience where users like you
       feel comfortable asking style advice from Oskar. <br> <br> Follow
       <a class="inline-block no-underline text-grey-darkest" href="https://twitter.com/trendydots" target="_blank"><i
           class="fab fa-twitter"></i> @trendydots</a> to find out more about
@@ -218,7 +218,7 @@
         <h4 class="py-2 uppercase font-bold tracking-wide">About</h4>
         <p class="font-sans">
           The Gentleman’style experiment is developed by Cristian-Dan Bara within the frames of the <a
-            href="https://trendydots.com/project">trendy dots</a> project. It aims to help build a prototype for an AI
+            href="https://trendydots.com/me">trendy dots</a> project. It aims to help build a prototype for an AI
           model which can give basic men’s style advices. Cristian-Dan is
           a non
           conventional researcher with a great interest in web development, web design and pretty much everything web
