--- a/me/index.html
+++ b/me/index.html
@@ -179,47 +179,8 @@
 
   </section>
 
-  <!-- support-->
-  <section class="font-sans m-auto w-full" style="margin-top: 50px; background: #F5F5F5;">
-    <div class="flex flex-col sm:flex-row flex-wrap items-center justify-center">
-      <div style=" z-index: 3;" class="w-full p-8 sm:w-1/2 flex flex-col items-left text-sm font-bold md:rounded">
-
-        <div class="w-full flex flex-col items-center justify-center my-8">
-          <a href="https://twitter.com/trendydots" target="_blank"
-            style="text-decoration: none; color: black; float: right;">
-            <img src="twitter_black.png" style="vertical-align: middle; height: 1em">
-            @trendydots
-          </a>
-        </div>
-
-        <h1 class="leading-normal mb-2 text-center te">
-          Cool people support the project 😎
-        </h1>
-        <br><br>
-        <div class="flex md:flex-row flex-col items-center justify-center mb-8">
-          <div class="flex flex-col ">
-            <a class="btn bg-white border border-red cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-md md:shadow items-center"
-              href="https://www.patreon.com/bePatron?u=14590376" target="_blank" style="white-space: nowrap;">
-              <img src="./patreon-logo1.png" style="height: 1.5em; vertical-align: middle;" alt="">
-              &nbsp;
-              <span style="white-space: nowrap;"> Become a patron</span>
-            </a>
-          </div>
-          &nbsp;&nbsp;&nbsp;&nbsp;
-          <div class="flex flex-col">
-            <a href="https://www.paypal.me/trendydots" target="_blank"
-              class="btn bg-white border border-blue cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow inline-flex items-center">
-              <img src="./paypal-logo.png" style="height: 1.5em; vertical-align: middle;" alt="">
-              &nbsp;&nbsp;
-              <span> Donate one time</span>
-            </a>
-          </div>
-        </div>
-      </div>
-  </section>
-
   <!-- Projects -->
-  <section class="font-sans w-full bg-white p-8">
+  <section class="font-sans w-full bg-white p-8" style="border-top:2px solid #eee">
     <div class="text-center">
       <h1 class="my-4 font-normal" style="font-weight: 700;
       font-size: 6vh; color:#757575">the <span class="font-bold text-black">td<span
@@ -327,7 +288,7 @@
     </section>
 
     <!-- EUvsVirus-->
-    <section style="border-top:1px solid #eee"
+    <section style="border-top:2px solid #eee"
       class="bg-white mb-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
       <div class="w-full lg:w-1/2">
         <img class="shadow-md rounded" src="./euvsvirus.png" alt="" />
