--- a/invest/index.html
+++ b/invest/index.html
@@ -39,8 +39,8 @@
   </style>
 
   <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="../css/jquery-eu-cookie-law-popup.css" />
-  <script src="../js/jquery-eu-cookie-law-popup.js"></script>
+  <link rel="stylesheet" type="text/css" href="//trendydots.com/css/jquery-eu-cookie-law-popup.css" />
+  <script src="//trendydots.com/js/jquery-eu-cookie-law-popup.js"></script>
   <script src="https://usebasin.com/f/06dcf3d4ebaf/ahoy.js" async defer></script>
 </head>
 
@@ -291,6 +291,7 @@
     </div>
   </section>
 
+  <!-- Articles -->
   <section class="bg-white py-4 font-sans">
     <h3 class="font-medium text-grey-darkest mb-4 text-center text-2xl py-4"> Written using td. trend research </h3>
 
