--- a/twitpitch/index.html
+++ b/twitpitch/index.html
@@ -22,7 +22,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.6/Chart.min.js"></script>
   <style>
     body {
-      background: #ffffff;
+      background: #f7f7f7;
       width: 100%;
       overflow-x: hidden;
       height: 100%;
@@ -76,7 +76,7 @@
       <div class="col s12 m6">
         <div class="row">
           <div class="col s12">
-            <ul class="tabs">
+            <ul class="tabs" style="background: #f7f7f7;">
               <li id="with-template" class="tab"><a class="active" href="#tab1">Use the template</a></li>
               <li id="freestyle" class="tab"><a href="#tab2">Freestyle</a></li>
             </ul>
@@ -178,7 +178,7 @@
                 <img src="./twitter.png" style="border-radius: 6px; height: 30px; margin-right: 5px; display: block;" />
                 <span id="with-template-pitch-text">When <span id="problem_statement_text"></span>, <br><span
                     id="company_name_text"></span> do <span id="solution_statement_text"></span>, <br>so that <span
-                    id="impact_statement_text"></span>.</span><br>
+                    id="impact_statement_text"></span>.</span>
                 <br><br>
               </div>
             </div>
