--- a/twitpitch/index.html
+++ b/twitpitch/index.html
@@ -161,7 +161,7 @@
                 Investopedia</a>
             </h6>
             <h6>
-              Made by <a target="_blank" href="https://trendydots.com/me/"> trendy dots</a>
+              Made by <a target="_blank" href="https://twitter.com/trendydots"> @trendydots</a>
             </h6>
           </div>
 
